--- a/src/app/components/footer/Footer.module.scss
+++ b/src/app/components/footer/Footer.module.scss
@@ -7,8 +7,7 @@
 
   .footer_top {
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-between;
 
     .logo_footer {
       position: relative;
@@ -21,8 +20,7 @@
   &_content  {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
-    gap: 20px;
+    gap: 50px;
 
     .subscribe {
       .line {
