--- a/src/app/components/header/Header.module.scss
+++ b/src/app/components/header/Header.module.scss
@@ -118,8 +118,8 @@
       .item {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
         position: fixed;
         left: -100%;
         right: 0;
@@ -127,7 +127,7 @@
         bottom: 0;
         width: 100%;
         height: 100vh;
-        background-color: #f8f8f8;
+        background-color: white;
         z-index: 10;
         transition: left 1s;
       }
