I start project page

--- a/src/app/dashboard/main/Main.module.scss
+++ b/src/app/dashboard/main/Main.module.scss
@@ -66,8 +66,13 @@
     }
   }
 
+  @media (max-width: 1024px) {
+    .contacts {
+      overflow: scroll;
+    }
+  }
+
   .contacts {
     margin-top: 150px;
-    overflow: scroll;
   }
 }
