--- a/src/app/dashboard/main/ourProjects/LastNews.module.css
+++ b/src/app/dashboard/main/ourProjects/LastNews.module.css
@@ -4,8 +4,59 @@
   margin-top: 70px;
 }
 
+@media (max-width: 768px) {
+  .card_block {
+    width: 340px !important;
+  }
+
+  .image {
+    width: 340px !important;
+  }
+
+  .card_block button {
+    width: 300px !important;
+    height: 35px;
+    border: 0;
+    background: none;
+    display: flex;
+    justify-content: flex-end;
+    margin: auto;
+    color: #4A99D3;
+    font-size: 20px;
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 1440px) {
+  .card_block {
+    width: 300px;
+  }
+
+  .image {
+    width: 300px;
+  }
+
+  .card_block button {
+    width: 270px !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .card_block {
+    width: 400px;
+  }
+
+  .image {
+    width: 400px;
+  }
+
+  .card_block button {
+    width: 270px !important;
+  }
+}
+
 .card_block {
-  max-width: 430px;
+  max-width: 420px;
   margin: 0 auto;
   box-shadow: 0 0 10px #DADADA;
   border-radius: 15px;
@@ -31,18 +82,6 @@
   color: #4A99D3;
   font-size: 20px;
   cursor: pointer;
-}
-
-.icon {
-  position: relative;
-  animation-name: active_svg;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  color: #4A99D3;
-  font-size: 25px;
-  width: 0px;
 }
 
 
