--- a/src/app/dashboard/projects/projects.module.scss
+++ b/src/app/dashboard/projects/projects.module.scss
@@ -1,10 +1,12 @@
 
 .projects {
+  display: flex;
   &_content {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     margin-top: 120px;
+    margin-bottom: 100px;
     
     @media (max-width: 1024px) {
       display: flex;
@@ -22,9 +24,33 @@
         }
       }
     }
+
+    @media (max-width: 425px) {
+      .image {
+        width: 100%;
+        height: 300px;
+      }
+      
+    }
+
     .left_content {
       width: 700px;
       height: 260px;
+
+      @media (max-width:425px) {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 150px;
+
+        h2 {
+          margin-bottom: 30px;  
+          font-size: 40px !important;      
+        }
+
+        p {
+          margin-top: 30px  !important;
+        }
+      }
 
       h2 {
         font-size: 48px;
