--- a/src/app/dashboard/main/ourProjects/LastNews.module.css
+++ b/src/app/dashboard/main/ourProjects/LastNews.module.css
@@ -55,6 +55,32 @@
   }
 }
 
+.selected_card_block {
+  width: 1330px;
+  margin: auto;
+}
+
+.selected_image {
+  width: 100%;
+  margin: auto;
+  height: 700px;
+  margin-top: 70px;
+}
+
+.selected_card_block h2 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.selected_description p {
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 50px;
+  color: #000000B2;
+  letter-spacing: 3%;
+  line-height: 34px;
+}
+
 .card_block {
   max-width: 420px;
   margin: 0 auto;
