I have done Projects page

--- a/src/app/dashboard/projects/projects.module.scss
+++ b/src/app/dashboard/projects/projects.module.scss
@@ -1,7 +1,6 @@
 
 .projects {
-  display: flex;
-  &_content {
+  .projects_content {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
