--- a/src/app/components/header/Header.module.scss
+++ b/src/app/components/header/Header.module.scss
@@ -32,8 +32,12 @@
       a {
         text-decoration: none;
         color: var(--text-color);
-        font-size: 22px;
+        font-size: 23px;
         font-weight: 400;
+        cursor: pointer;
+      }
+      .active {
+        color: var(--btn-and-leaves-color);
       }
     }
 
