--- a/src/app/components/newsTopSlider/NewsTopSlider.module.scss
+++ b/src/app/components/newsTopSlider/NewsTopSlider.module.scss
@@ -2,18 +2,40 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  max-width: 800px;
   margin: 0 auto;
-
+  
   .inline_content {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
-
+  
   .description {
     display: none;
     transition: opacity 0.5s ease-in-out;
-    width: 900px;
+    width: 620px;
+    height: 600px;
+    border: 1px solid #DADADA;
+    border-left: 0;
+    margin: auto;
+
+    h4{
+      margin-top: 50px ;
+      color: #6A6A6A;
+    }
+    h3 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-top: 70px;
+      width: 100%;
+    }
+    p {
+      margin-top: 50px;
+      font-size: 20px;
+      font-weight: 400;
+      color: #000000;
+    }
   }
 
   .active {
@@ -22,29 +44,19 @@
 
   .slide {
     display: none;
-    transition: opacity 0.5s ease-in-out;
-    @media (max-width:425px) {
-      max-width: 100%;
-      margin: 0 auto;
-      height:450px ;
-    }
-
-    @media (max-width: 375px) {
-      max-width: 100%;
-      height: 350px;
-    }
+    transition: opacity 1s ease-in-out;
   }
+
   .active {
     display: block;
   }
 }
 
 .dotsContainer {
-  margin-top: 30px;
+  margin-top: 40px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   @media (max-width: 1024px) {
     margin-bottom: 50px;
   }
@@ -55,14 +67,14 @@
     border-radius: 50%;
     background-color: #C4C4C4;
     cursor: pointer;
-    transition: 0.5s ease-in-out;
+    transition: 1s ease-in-out;
   }
 
   .activeDot {
     background-color: var(--btn-and-leaves-color);
     width: 30px;
-    height: 5px;
-    border-radius: 20%;
+    height: 10px;
+    border-radius: 25%;
   }
 }
 
