--- a/src/app/components/newsTopSlider/NewsTopSlider.module.scss
+++ b/src/app/components/newsTopSlider/NewsTopSlider.module.scss
@@ -3,18 +3,83 @@
   position: relative;
   width: 100%;
   margin: 0 auto;
+
+  .active_li {
+    color: var(--btn-and-leaves-color);
+  }
+
+  .inline {
+    margin-top: 70px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    @media (max-width: 1440px) {
+      .item_content {
+        width: 600px !important;
+      }
+
+      ul {
+        li {
+          width: 600px !important;
+        }
+      }
+    }
+
+    .item_content {
+      width: 1000px;
+
+      .line {
+        margin-bottom: 70px;
+        margin-top: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #DADADA;
+      }
+
+      p {
+        margin-top: 10px;
+        font-size: 15px;
+        font-weight: 400;
+        color: #6A6A6A;
+      }
+    }
+
+
+
+    ul {
+      h2 {
+        font-size: 35px;
+        font-weight: 700;
+        margin-top: 0;
+      }
+
+      li {
+        width: 1000px;
+        font-size: 20px;
+      }
+
+    }
+  }
   
   .inline_content {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     flex-wrap: wrap;
+
+    @media (max-width: 1440px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
   
   .description {
     display: none;
     transition: opacity 0.5s ease-in-out;
-    width: 620px;
+    width: 600px;
     height: 600px;
     border: 1px solid #DADADA;
     border-left: 0;
