--- a/src/app/components/scrollCard/ScrollCard.module.scss
+++ b/src/app/components/scrollCard/ScrollCard.module.scss
@@ -16,18 +16,25 @@
 
 @media (max-width: 768px) {
   .card {
-    width: 95%;
+    width: 700px !important;
     margin: auto;
-    max-height: 600px;
+    max-height: 750px;
     display: flex;
     align-items: center;
     flex-direction: row;
+
+    .card_content {
+      h2 {
+        font-size: 30px;
+      }
+    }
   }
 }
 
 @media (max-width: 1024px) {
   .card {
     width: 910px !important;
+    max-height: 950px !important;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -38,6 +45,19 @@
   .card_content {
     button {
       width: 250px !important;
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .card {
+    width: 350px !important;
+    height: 100%;
+
+    .card_content {
+      button {
+        width: 300px !important;
+      }
     }
   }
 }
