I made a photoGallery today and fixed the burger

--- a/src/app/components/scrollCard/ScrollCard.module.scss
+++ b/src/app/components/scrollCard/ScrollCard.module.scss
@@ -5,7 +5,7 @@
   padding: 1rem;
   overflow-y: auto;
   direction: ltr;
-  scrollbar-color: #d4aa70 #e4e4e4;
+  scrollbar-color: gray #e4e4e4;
   scrollbar-width: thin;
   box-shadow: 0 0 10px gray;
   display: flex;
