--- a/src/app/dashboard/projects/category/Category.module.scss
+++ b/src/app/dashboard/projects/category/Category.module.scss
@@ -12,6 +12,11 @@
       border: 0;
     }
   }
+
+  .column_category {
+    display: flex;
+    flex-direction: column;
+  }
   
   .category_selected {
     display: flex;
