--- a/src/app/components/header/Header.module.scss
+++ b/src/app/components/header/Header.module.scss
@@ -1,43 +1,325 @@
 
+// .header {
+//   margin-top: 30px;
+
+//   @media (max-width: 768px) {
+//     width: 350px;
+//     margin: 0 auto;
+//     margin-top: 30px;
+//   }
+//   .navbar {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+
+//     .logo_and_language {
+//       display: flex;
+//       align-items: center;
+//       gap: 20px;
+//     }
+
+//     .select {
+//       width: 100px;
+
+//       button {
+//         display: flex;
+//         justify-content: center;
+//       }
+
+//       .flags_button {
+//         border: none;
+//         padding: 0;
+//       }
+//     }
+
+//     .item {
+//       display: flex;
+//       gap: 40px;
+
+//       @media (max-width: 768px) {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//         position: fixed;
+//         left: -100%;
+//         right: 0;
+//         top: 0;
+//         bottom: 0;
+//         width: 100%;
+//         height: 100vh;
+//         background-color: white;
+//         z-index: 10;
+//         transition: left 1s;
+//       }
+
+//       a {
+//         text-decoration: none;
+//         color: var(--text-color);
+//         font-size: 23px;
+//         font-weight: 400;
+//         cursor: pointer;
+//       }
+//       .active {
+//         color: var(--btn-and-leaves-color);
+
+//         @media (max-width: 768px) {
+//           left: 0;
+//         }
+//       }
+//     }
+
+//     .btn {
+//       width: 184px;
+//       height: 46px;
+//       background: none;
+//       border-radius: 8px;
+//       border: 1.5px solid var(--btn-and-leaves-color);
+//       color:var(--btn-and-leaves-color);
+//       cursor: pointer;
+//     }
+    
+//     .burger_el {
+//       display: none;
+//     }
+//   }
+
+// }
+
+// @media (min-width: 1827px) {
+//   .header {
+//     // min-width: 100%;
+//   }
+// }
+
+// @media (min-width: 1440px) {
+//   .header {
+//     max-width: 100%;
+
+//     .navbar  {
+//       display: flex;
+//       gap: 60px;
+//       align-items: center;
+//       justify-content: space-between;
+
+//       .btn {
+//         width: 150px;
+//         height: 46px;
+//         background: none;
+//         border-radius: 8px;
+//         border: 1.5px solid var(--btn-and-leaves-color);
+//         color:var(--btn-and-leaves-color);
+//         cursor: pointer;
+//       }
+//     }
+//   }
+// }
+
+// @media (max-width: 1024px) {
+//   .navbar {
+//     display: flex;
+//     flex-direction: column;
+
+//     .item {
+//       padding: 40px 0;
+//     }
+//   }
+// }
+
+// @media (max-width: 768px) {
+//   .header {
+//     width: 350px;
+//     margin: 0 auto;
+//     margin-top: 30px;
+
+//     .navbar { 
+//       display: flex;
+//       flex-direction: row;
+//       align-items: center;
+
+
+//       .burger_el {
+//         display: block;
+//         cursor: pointer;
+//         z-index: 10;
+//       }
+
+//       .btn {
+//         display: none;
+//       }
+
+//       .item {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//         position: fixed;
+//         left: -100%;
+//         right: 0;
+//         top: 0;
+//         bottom: 0;
+//         width: 100%;
+//         height: 100vh;
+//         background-color: white;
+//         z-index: 10;
+//         transition: left 1s;
+//       }
+
+      
+//       .active {
+//         left: 0;
+//       }
+//     }
+  
+//   }
+// }
+
+
+// @media (min-width: 320px) {
+  
+//   .logo_and_language {
+//     display: flex;
+//     align-items: center;
+//     margin-left: 0;
+
+//     .select {
+//       width: 0;
+//     }
+//   }
+// }
+
+
+// .header {
+//   margin-top: 30px;
+
+//   .navbar {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+
+//     @media (max-width: 1024px) {
+//       display: flex;
+//       align-items: center;
+//       flex-direction: column;
+//     }
+
+//     .logo_and_language {
+//       display: flex;
+//       align-items: center;
+//       gap: 20px;
+
+//       .select {
+//         width: 100px;
+  
+//         button {
+//           display: flex;
+//           justify-content: center;
+//         }
+  
+//         .flags_button {
+//           border: none;
+//           padding: 0;
+//         }
+//       }
+//     }
+
+//     .item {
+//       display: flex;
+//       align-items: center;
+//       gap: 30px;
+
+//       @media (max-width: 1024px) {
+//         margin: 35px 0;
+//       }
+//       @media (max-width: 425px) {
+//         display: none;
+//       }
+
+//       li {
+//         a {
+//           text-decoration: none;
+//           color: var(--text-color);
+//           font-size: 23px;
+//           font-weight: 400;
+//           cursor: pointer;
+//         }
+
+//         .active {
+//           color: var(--btn-and-leaves-color);
+//         }
+//       }
+//     }
+
+//     .btn {
+//       width: 184px;
+//       height: 46px;
+//       background: none;
+//       border-radius: 8px;
+//       border: 1.5px solid var(--btn-and-leaves-color);
+//       color:var(--btn-and-leaves-color);
+//       cursor: pointer;
+//     }
+    
+//     .burger_el {
+//       display: none;
+//     }
+//   }
+// }
+
 .header {
   margin-top: 30px;
+
   .navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
+
     .logo_and_language {
       display: flex;
       align-items: center;
       gap: 20px;
-    }
 
-    .select {
-      width: 100px;
+      .select {
+        width: 100px;
 
-      button {
-        display: flex;
-        justify-content: center;
-      }
+        button {
+          display: flex;
+          justify-content: center;
+        }
 
-      .flags_button {
-        border: none;
-        padding: 0;
+        .flags_button {
+          border: none;
+          padding: 0;
+        }
       }
     }
 
     .item {
       display: flex;
-      gap: 40px;
-      a {
-        text-decoration: none;
-        color: var(--text-color);
-        font-size: 23px;
-        font-weight: 400;
-        cursor: pointer;
+      align-items: center;
+      gap: 30px;
+      margin: 0; /* Убираем отступы */
+
+      @media (max-width: 1024px) {
+        display: none; /* Скрываем элементы в мобильной версии */
       }
-      .active {
-        color: var(--btn-and-leaves-color);
+
+      li {
+        a {
+          text-decoration: none;
+          color: var(--text-color);
+          font-size: 23px;
+          font-weight: 400;
+          cursor: pointer;
+        }
+
+        .active {
+          color: var(--btn-and-leaves-color);
+        }
       }
     }
 
@@ -47,113 +329,33 @@
       background: none;
       border-radius: 8px;
       border: 1.5px solid var(--btn-and-leaves-color);
-      color:var(--btn-and-leaves-color);
+      color: var(--btn-and-leaves-color);
       cursor: pointer;
+
+      @media (max-width: 1024px) {
+        margin-top: 20px; 
+      }
     }
-    
+
     .burger_el {
-      display: none;
-    }
-  }
-
-}
-
-@media (min-width: 1827px) {
-  .header {
-    // min-width: 100%;
-  }
-}
-
-@media (min-width: 1440px) {
-  .header {
-    max-width: 100%;
-
-    .navbar  {
-      display: flex;
-      gap: 60px;
+      display: flex; 
       align-items: center;
-      justify-content: space-between;
+      cursor: pointer;
+      margin-top: 25px;
 
-      .btn {
-        width: 150px;
-        height: 46px;
-        background: none;
-        border-radius: 8px;
-        border: 1.5px solid var(--btn-and-leaves-color);
-        color:var(--btn-and-leaves-color);
-        cursor: pointer;
+      @media (min-width: 1025px) {
+        display: none; 
       }
     }
   }
-}
 
-@media (max-width: 1024px) {
-  .navbar {
-    display: flex;
-    flex-direction: column;
-
-    .item {
-      padding: 40px 0;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .header {
-    width: 350px;
-    margin: 0 auto;
+  // Добавляем стили для показа элементов .item при активации бургер-меню
+  &.active .item {
     margin-top: 30px;
-    .navbar { 
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-
-      .burger_el {
-        display: block;
-        cursor: pointer;
-        z-index: 10;
-      }
-
-      .btn {
-        display: none;
-      }
-
-      .item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-        left: -100%;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: white;
-        z-index: 10;
-        transition: left 1s;
-      }
-
-      
-      .active {
-        left: 0;
-      }
-    }
-  
-  }
-}
-
-@media (min-width: 320px) {
-  
-  .logo_and_language {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    margin-left: 0;
-
-    .select {
-      width: 0;
-    }
+    justify-content: center;
+    margin-bottom: 20px;
   }
 }
