--- a/src/app/components/newsTopSlider/NewsTopSlider.module.scss
+++ b/src/app/components/newsTopSlider/NewsTopSlider.module.scss
@@ -54,8 +54,9 @@
         font-weight: 700;
         margin-top: 0;
       }
-
+      
       li {
+        margin-top: 70px;
         width: 1000px;
         font-size: 20px;
       }
