--- a/src/app/dashboard/main/Main.module.scss
+++ b/src/app/dashboard/main/Main.module.scss
@@ -66,6 +66,28 @@
     }
   }
 
+
+  .categpry {
+    width: 100%;
+  }
+
+    .main_custom {
+  
+      .customClass {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      
+        li {
+          margin: 15px 0;
+          font-size: 28px;
+          font-weight: 400;
+        }
+      }
+    }
+
+
+
   @media (max-width: 1024px) {
     .contacts {
       overflow: scroll;
