--- a/src/app/AdminPart/adminComponents/sideBar/SideBar.module.scss
+++ b/src/app/AdminPart/adminComponents/sideBar/SideBar.module.scss
@@ -1,10 +1,11 @@
 .sidebar {
-  width: 277px;
+  width: 270px;
   background-color: #2A2A2A;
   height: 881px;
   margin: 0;
 
   ul {
+    width: 100%;
     margin: 0;
     padding: 0;
     padding-top: 50px;
