--- a/src/app/AdminPart/adminComponents/header/Header.module.scss
+++ b/src/app/AdminPart/adminComponents/header/Header.module.scss
@@ -18,10 +18,12 @@
   
       svg {
         color: white;
+        width:23px; 
+        height: 23px;
       }
   
       p {
-        font-size: 18px;
+        font-size: 23px;
         font-weight: 400;
         color: white;
       }
