--- a/src/app/AdminPart/adminDashboard/gallery/AddGallery/AddGallery.module.scss
+++ b/src/app/AdminPart/adminDashboard/gallery/AddGallery/AddGallery.module.scss
@@ -2,6 +2,18 @@
 .add_gallery {
   margin-top: 50px;
 
+  .btn {
+      background-color: #D22525;
+      width: 142px;
+      height: 50px;
+      border: 0;
+      font-size: 17px;
+      color: white;
+      cursor: pointer;
+      position: absolute;
+      top: 480px;
+  }
+
   h2 {
     font-size: 32px;
     font-weight: 400;
@@ -92,21 +104,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 50px;
     margin-top: 30px;
 
     :nth-child(1) {
       background-color: var(--btn-and-leaves-color);
-      width: 142px;
-      height: 50px;
-      border: 0;
-      font-size: 17px;
-      color: white;
-      cursor: pointer;
-    }
-
-    :nth-child(2) {
-      background-color: #D22525;
       width: 142px;
       height: 50px;
       border: 0;
