--- a/src/app/AdminPart/adminDashboard/news/addNews/AddNews.module.scss
+++ b/src/app/AdminPart/adminDashboard/news/addNews/AddNews.module.scss
@@ -2,6 +2,18 @@
 .add_news {
   margin-top: 50px;
 
+  .btn {
+    position: relative;
+    top: -50px;
+    background-color: #D22525;
+    width: 142px;
+    height: 50px;
+    border: 0;
+    font-size: 17px;
+    color: white;
+    cursor: pointer;
+  }
+
   h2 {
     font-size: 32px;
     font-weight: 400;
@@ -163,6 +175,7 @@
         border: 0;
         font-size: 17px;
         color: white;
+        cursor: pointer;
       }
 
       :nth-child(2) {
@@ -172,6 +185,7 @@
         border: 0;
         font-size: 17px;
         color: white;
+        cursor: pointer;
       }
     }
   }
