I am adding client information

--- a/src/app/AdminPart/register/Register.module.scss
+++ b/src/app/AdminPart/register/Register.module.scss
@@ -4,6 +4,12 @@
   place-items: center;
   margin-top: 300px;
 
+  .error {
+    color: rgb(227, 7, 7);
+    font-size: 23px;
+    text-align: center;
+  }
+
   &_name {
     display: flex;
     align-items: center;
