--- a/src/app/components/footer/Footer.module.scss
+++ b/src/app/components/footer/Footer.module.scss
@@ -50,6 +50,7 @@
           color: #FFFFFF;
           border: 1px solid rgb(122, 122, 122);
           padding: 0 5px;
+          color: black;
         }
 
         button {
